incomplete tooltips in node editor #35547

Closed
opened 2013-05-28 08:46:51 +02:00 by Kris Slazinski · 3 comments

%%%--- Operating System, Graphics card ---
OS X 10.8.3, NVIDIA GeForce 320M 256 MB

- Blender version with error, and version that worked ---

error: 2.67a, worked: 2.66a

- Short description of error ---

Tooltips in the Node Editor are incomplete. When you hover mouse cursor over node types, there should be info saying "shader nodes" or "texture nodes". In 2.67a those details are gone.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Just check attached screenshots taken from 2.67a and 2.66a.%%%

%%%--- Operating System, Graphics card --- OS X 10.8.3, NVIDIA GeForce 320M 256 MB - Blender version with error, and version that worked --- error: 2.67a, worked: 2.66a - Short description of error --- Tooltips in the Node Editor are incomplete. When you hover mouse cursor over node types, there should be info saying "shader nodes" or "texture nodes". In 2.67a those details are gone. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Just check attached screenshots taken from 2.67a and 2.66a.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fixed in svn rev57072. Thanks for the report, closing.%%%

%%%Fixed in svn rev57072. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
2 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#35547
No description provided.