Fix #35547: incomplete tooltips in node editor

Descriptions were missing since PyNodes integration.

Thanks to lukas for patch review!